--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <title>Connor's Website</title>
         <style>
             body {
-                background: rgb(125, 198, 205);
-                color: rgb(45, 45, 45);
+                background: rgb(0, 234, 255);
+                color: rgb(255, 0, 200);
                 padding: 10px;
-                font-family: arial;
+                font-family: Georgia, 'Times New Roman', Times, serif;
             }
             #all-contents {
                 max-width: 800px;
@@ -16,8 +16,9 @@
         
             /* navigation menu */
             nav {
-                background: rgb(239, 80, 41);
+                background: rgb(72, 255, 0);
                 margin: 0 auto;
+                margin-bottom: 20px;
                 display: flex;
                 padding: 10px;
             }
@@ -68,7 +69,7 @@
     <body>
         <!-- CONTENT HERE-->
         <div id="all-contents">
-            <nav>
+            <nav border-radius: 10% / 50%;>
                 <h1>Connor's Website</h1>
                 <ul id="nav-ul">
                     <li class="nav-li">
@@ -85,11 +86,11 @@
                     <img class="sidebar-img" src="https://c.tenor.com/-OpJG9GeK3EAAAAC/kanye-west-stare.gif"
                 </div>
                 <!--CONTENT-->
-                <div>
+                <div class="content">
                     <h2>Connor Mitchell</h2>
                     <p>Student at Mandeville High</p>
                     <!--INTERESTS SECTION-->
-                    <div>
+                    <div id="interests">
                         <h3>Interests</h3>
                         <ul>
                             <li>Media Arts</li>
