add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 flex: 1;
                 padding: 15px;
             }
-            .intro {
+            span {
                 color: rgb(235, 32, 201);
                 background-color: rgba(0, 234, 255, 0.781)
             }
@@ -100,7 +100,7 @@
                 <!--CONTENT-->
                 <div class="content">
                     <h2> 
-                        <span class="intro">Connor Mitchell</span>
+                        <span>Connor Mitchell</span>
                     </h2>
                     <p>
                         <span class="intro">Student at Mandeville High </span>
