--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -8,16 +8,18 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: teal;
+			background-color: rgb(0, 238, 255);
+			font-family: cursive;
 			font-size: 300%;
 			text-align: center;
 			display: block;
 			position: absolute;
 			top: 100px;
-			left: 0px;  /* <--- Change me! */
+			left: 99px;  /* <--- Change me! */
 		}
 		.board{
 			height: 100vh;
+			background-image : url(https://pro2-bar-s3-cdn-cf4.myportfolio.com/e39b78a5123310228ead38e0d4e29f2d/f6ec2216-96fd-4d18-9702-a85761ff4e48_rw_600.gif?h=d11a6b06667a16455c9a75d59da0e38e);
 		}
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
@@ -41,14 +43,15 @@
 			var boardWidth = board.width();	// the maximum X-Coordinate of the screen
 
 			// Every 50 milliseconds, call the update Function (see below)
-			setInterval(update, 50);
+			var interval = setInterval(update, 50);
 			
 			// Every time the box is clicked, call the handleBoxClick Function (see below)
 			box.on('click', handleBoxClick);
 
 			// moves the Box to a new position on the screen along the X-Axis
-			function moveBoxTo(newPositionX) {
+			function moveBoxTo(newPositionX, newPositionY) {
 				box.css("left", newPositionX);
+				box.css("top", newPositionY);
 			}
 
 			// changes the text displayed on the Box
@@ -62,6 +65,12 @@
 			
 			// TODO 2 - Variable declarations 
 			
+			var positionX = 0;
+			var points = 0;
+			var speed = 10;
+			var positionY = 0;
+			var speedY = 10;
+			var boardHeight = jQuery(window).height();
 
 			
 			/* 
@@ -70,7 +79,21 @@
 			turn it around! 
 			*/
 			function update() {
-				
+				positionX = positionX + speed
+				positionY = positionY + speedY
+				moveBoxTo(positionX, positionY);
+				if (positionX > boardWidth) {
+					speed = speed * -1;
+				}
+				if (positionX < 0) {
+					speed = speed * -1;
+				}
+				if (positionY > boardHeight) {
+					speedY = -speedY;
+				}
+				if (positionY < 0) {
+					speedY = -speedY;
+				}
 
 			};
 
@@ -80,7 +103,31 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				
+				positionX = 0;
+				points = points + 1;
+				changeBoxText(points);
+				if (speed > 0) {
+					speed = speed + 4;
+				} else if (speed < 0);
+					speed = speed - 3;
+
+			// lose condition, doesn't work but i tried
+			
+			var misclick = 0;
+
+			board.on("click", missedClick);
+
+			function missedClick() {
+				misclick = misclick + 1;
+			}
+			
+			if (misclick >= 10) {
+				endGame;
+			}
+
+			function endGame() {
+				clearInterval(interval);
+			}
 
 
 			};
